<resources>
    <string name="app_name">Examen</string>
    <string name="todo">TODO</string>
    <string name="user">User</string>
    <string name="button">Button</string>
    <string name="pasword">pasword</string>
    <string name="registrese">Registrese</string>
    <string name="title_activity_registro">RegistroActivity</string>
    <string name="title_activity_principal">PrincipalActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="agregar">Agregar</string>
</resources>
