<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="177dp"
        android:layout_height="235dp"
        android:layout_gravity="top|center"
        android:layout_marginLeft="6dp"
        android:layout_marginStart="6dp"
        android:contentDescription="@string/todo"
        android:paddingTop="25dp"
        app:srcCompat="@mipmap/user" />

    <EditText
        android:id="@+id/edtusuario1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:paddingLeft="50dp"
        android:paddingRight="50dp" />

    <EditText
        android:id="@+id/edtpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/pasword"
        android:inputType="textPassword"
        android:paddingLeft="50dp"
        android:paddingRight="50dp" />

    <Button
        android:id="@+id/btningresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="25dp"
        android:text="Ingresar" />

    <TextView
        android:id="@+id/txtr"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/registrese"
        android:textColorLink="@color/colorPrimary" />
</LinearLayout>

</RelativeLayout>